--- a/report/report/related.tex
+++ b/report/report/related.tex
@@ -2,13 +2,13 @@
 
 \section{Related Problems and Extensions}
 
-In this section we discuss a number of problems and extensions related to the Robust PCA framework. We will much briefer in our discussion than for the classic case and mainly provide an outlook on where the field going and what the most important references are.
+In this section we discuss a number of problems and extensions related to the Robust PCA framework. We will be much briefer in our discussion than for the classic case and mainly provide an overview of where the field going and what the most important developments are.
 
 
 
 %-----------------------------------------------------------------------------------------------------------------------------------------------------------------
 \subsection{Exact Matrix completion}
-Robust PCA is an extension of the exact matrix completion problem that was introduced in~\cite{Candes:2009uq}, where one seeks to recover a low-rank matrix $L_0$ from a small fraction of its entries. More precisely, assume one is given $\{(L_0)_{ij}, (i,j)\in \Omega\}$ where $\Omega$ is a subset of $[n]\times [n]$. The observed matrix in this case is
+Robust PCA is an extension of the exact matrix completion problem that was introduced in~\cite{Candes:2009uq}, in which one seeks to recover a low-rank matrix $L_0$ from a small fraction of its entries. More precisely, assume one is given $\{(L_0)_{ij}, (i,j)\in \Omega\}$ where $\Omega$ is a subset of $[n]\times [n]$. The observed matrix in this case is
 \[
 M = P_\Omega L_0
 \]
@@ -95,7 +95,7 @@ for some numerical constant $\mu_B$. Observe that under these conditions, one ca
 %-------------------------------------------------------------------------
 \subsubsection{Relation to Robust PCA}
 %
-Robust PCA can be thought of as an extension of the matrix completion problem, where instead of being given a known subset of the entries $\{(L_0)_{ij}, (i,j)\in \Omega\}$ and the rest is missing, we have exact information about an unknown subset of the entries and the rest of the entries is corrupted. In this sense, Robust PCA is a harder problem.
+Robust PCA can be thought of as an extension of the matrix completion problem, where instead of being given a known subset of the entries $\{(L_0)_{ij}, (i,j)\in \Omega\}$ with the rest of the entries missing, we have exact information about an unknown subset of the entries and the rest of the entries is corrupted. In this sense, Robust PCA is a harder problem than matrix completion.
 
 Note that the matrix $L_0$ can be recovered by Principal Component Pursuit, solving a different problem:
 \begin{equation}
@@ -187,7 +187,7 @@ The convex optimization framework for low-rank matrix recovery has been employed
 %
 Here $L \in\mathbb{R}^{m\times n}$ is the low-rank matrix, $S\in\mathbb{R}^{m\times n}$ is a sparse corruption matrix and~$M\in\mathbb{R}^{m\times n}$ contains the measurements, which are the result of the transformation $\tau^{-1}$ applied to the matrix $(L+S)$. The authors in~\cite{Peng:2010} assume that the transformation is invertible. Define $M\circ\tau$ as: $M\circ\tau = [\;M_{1}\circ\tau_{1} \;|\;M_{2}\circ\tau_{2} \;|\; \dots \;|\; M_{n}\circ\tau_{n}\;]$, which are the measurements $M=[\;M_{1} \;|\;M_{2} \;|\; \dots \;|\; M_{n}\;]$ subject to the set of transformations $\tau=[\;\tau_{1} \;|\;\tau_{2} \;|\; \dots \;|\; \tau_{n}\;] \in\mathbb{G}^n$, where $\mathbb{G}$ is a group of certain type of invertible transformations, which could be affine transform, rotation transform, etc.  \\
 
-The main difficulty in solving ~\eqref{eq:rasl:original} is the nonlinearity of the equality constraint $M\circ\tau = L+S$. When the change induced by $\tau$ is small, one can approximate this constraint by linearizing about the current estimate of the transformation $\tau$. Suppose now that $\mathbb{G}$ is some $p$-parameter group and identify $\tau=[\;\tau_{1} \;|\;\tau_{2} \;|\; \dots \;|\; \tau_{n}\;] \in \mathbb{R}^{p\times n}$ with the parameterizations of all of the transformations. For $\Delta\tau = [\;\Delta\tau_{1} \;|\; \Delta\tau_{2} \;|\; \dots \;|\; \Delta\tau_{n}\;]$, write $M\circ(\tau+\Delta\tau) \approx M\circ\tau + \sum_{i=1}^n J_{i}\Delta\tau_{i}e_{i}$, where $J_{i} \doteq \frac{\partial}{\partial\zeta}(M_{i}\circ\zeta)|_{\zeta = \tau_{i}}$ is the Jacobian of the $i$-th measurement with respect to the parameters $\tau_{i}$ and $\{e_{i}\}$ denotes the standard basis for $\mathbb{R}^n$. This leads to a convex optimization problem involving the variables $L, S, \Delta\tau$:
+The main difficulty in solving~\eqref{eq:rasl:original} is the nonlinearity of the equality constraint $M\circ\tau = L+S$. When the change induced by $\tau$ is small, one can approximate this constraint by linearizing about the current estimate of the transformation $\tau$. Suppose now that $\mathbb{G}$ is some $p$-parameter group and identify $\tau=[\;\tau_{1} \;|\;\tau_{2} \;|\; \dots \;|\; \tau_{n}\;] \in \mathbb{R}^{p\times n}$ with the parameterizations of all of the transformations. For $\Delta\tau = [\;\Delta\tau_{1} \;|\; \Delta\tau_{2} \;|\; \dots \;|\; \Delta\tau_{n}\;]$, write $M\circ(\tau+\Delta\tau) \approx M\circ\tau + \sum_{i=1}^n J_{i}\Delta\tau_{i}e_{i}$, where $J_{i} \doteq \frac{\partial}{\partial\zeta}(M_{i}\circ\zeta)|_{\zeta = \tau_{i}}$ is the Jacobian of the $i$-th measurement with respect to the parameters~$\tau_{i}$ and~$\{e_{i}\}$ denotes the standard basis for $\mathbb{R}^n$. This leads to a convex optimization problem involving the variables $L, S, \Delta\tau$:
 %
 \begin{align}
 \min_{L, S, \Delta\tau}  \|L\|_{*} + \lambda\|S\|_{1}  \quad \text{s.t.} \;  M\circ\tau + \sum_{i=1}^n J_{i}\Delta\tau e_{i}e_{i}^{T}= L+S
@@ -198,7 +198,7 @@ The main difficulty in solving ~\eqref{eq:rasl:original} is the nonlinearity of 
 Using a successive approximation of the changes~$\Delta \tau$ leads to Algorithm~\ref{alg:RASL}.
 %
 \begin{algorithm}[h!]
-\caption{RASL}
+\caption{RASL (Robust Alignment by Sparse and Low-rank Decomposition}
 \KwIn{$M = [\; M_{1} \;|\; M_{2} \;|\; \dots \;|\; M_{n}]$, initial transformation $\tau_{1}, \tau_{2}, \dots, \tau_{n}$ in a certain parametric group $\mathbb{G}$, weight $\lambda > 0$.}
 \While{not converged}{
 \textbf{Step 1:} compute Jacobian matrices w.r.t. transformation: %$J_{i} \leftarrow \frac{\partial}{\partial\zeta}(D_{i}\circ\zeta)|_{\zeta = \tau_{i}}$ \\
@@ -216,11 +216,11 @@ J_{i} \leftarrow \frac{\partial}{\partial\zeta}(M_{i}\circ\zeta)|_{\zeta = \tau_
 \label{alg:RASL}
 \end{algorithm}
 
-The authors in ~\cite{Peng:2010} have shown that the RASL algorithm can in fact be viewed as a Gauss-Newton method for minimizing the composition of a nonsmooth covex function with a smooth, nonlinear mapping. The convergence behavior of such algorithm was extensively studied in the late 1970's and early 1980's ~\cite{Jittorntrum:1980qy}. Although they claimed that the result of ~\cite{Jittorntrum:1980qy} implies that RASL converges quadratically in the neighborhood of any strongly unique local minimum, a complete convergence theory would still be verified and they delay it to future work.
+The authors in ~\cite{Peng:2010} have shown that the RASL algorithm can in fact be viewed as a Gauss-Newton method for minimizing the composition of a nonsmooth covex function with a smooth, nonlinear mapping. The convergence behavior of such algorithms was extensively studied in the late 1970's and early 1980's~\cite{Jittorntrum:1980qy}. Although the authors claim that the result of ~\cite{Jittorntrum:1980qy} implies that RASL converges quadratically in the neighborhood of any strongly unique local minimum, a complete convergence analysis for RASL has yet to be developed. %l be verified and they delay it to future work.
 
-Another remark is that the inner loop (Step 2) in RASL algorithm is another convex optimization problem, this problem can be solved by Augmented Lagrange Multiplier (ALM) algorithm ~\cite{Candes:2011fk}, ~\cite{Lin:2009kx}. We do not derive this algorithm here, but the  derivation is similar to the ALM algorithm in Robust PCA framework that we will discuss in Algorithm Chapter. Similarly, although the algorithm always converges to the optimal solution in Step 2 in experiment, a rigorous proof of convergence remains further discussion. As in every iteration in RASL, a PCP problem in inner loop should be solved, the computational time of RASL will be longer than a standard PCP problem depending on how many iterations it needs. The authors observed that in their experiments, only a few iterations, typically less than 20, are required for the algorithm to converge due to the quadratic convergence property of the problem.
+Another remark is that the inner loop (Step 2) in the RASL algorithm is another convex optimization problem, this problem can be solved by Augmented Lagrange Multiplier (ALM) algorithm~\cite{Lin:2009kx,Candes:2011fk}. We do not derive this algorithm here, but its derivation is similar to that of the ALM algorithm for Robust PCA that we will discuss in the Algorithms chapter of this report. Similarly, although the algorithm for Step~2 always converges to the optimal solution in numerical experiments, a rigorous proof of convergence so far has not been given. As in every iteration in RASL, a standard PCP problem needs to be solved in the inner loop, the computational complexity of RASL will be higher than that of standard Robust PCA. The authors observed that in their experiments only a few iterations, typically less than 20, were required for the algorithm to converge due to the outer algorithm's quadratic convergence property.
 
-RASL can be used for long-standing batch image alignment problem: given many images of an object or objects of interest, align them to a fixed canonical template. The images may subject to different illumination variation, partial occlusion, as well as poor or even no alignment. Finally, we show an example of how RASL performs in image alignment problem:
+RASL can be used for example for long-standing batch image alignment problem: given many images of an object or objects of interest, the task is to align them to a fixed canonical template. The images may be subject to different illumination variation, partial occlusion, as well as poor or even no alignment. Figure~\ref{fig:rasl:example} shows an example of how RASL performs on an image alignment problem:
 
 \begin{figure}[h!]
   \centering
@@ -242,46 +242,32 @@ RASL can be used for long-standing batch image alignment problem: given many ima
 \subsection{Robust Matrix Decomposition With Sparse Corruptions}
 \subsubsection{Introduction}
 
-In the problem of solving Robust PCA, exact recovery via convex optimization
-of $L_{1}$norm and nuclear norm is possible with high probability
-if the sparse noise is evenly spread out. However, in some applications,
-the sparse noise may not be evenly spread out and we are satisfied
-as long as the recovered matrix is sufficiently close with the original
-matrix. Therefore, the authors \cite{Hsu:2011ys} analyze the robust PCA
-problem in a deterministic setting without assuming the sparsity pattern
-of the noise. They give sufficient conditions on how much sparsity
-is allowed for a tolerable recovery of the sparse-lowrank pairs.
+In the problem of solving Robust PCA, exact recovery via convex optimization of the $\ell_{1}$ and nuclear norm heuristic is possible with high probability if the sparse noise is evenly spread out. However, in some applications, the sparse noise may not be evenly spread out and we are satisfied as long as the recovered matrix is sufficiently close with the original matrix. Therefore, the authors~\cite{Hsu:2011ys} analyze the Robust PCA problem in a deterministic setting without assuming a particular sparsity pattern of the noise. They give sufficient conditions on the level of sparsity that is required for a tolerable recovery of the sparse and low-rank pairs.
 
 
 \subsubsection{Main ideas and contributions}
-
-Similar to the prior study of Robust PCA, the authors \cite{Hsu:2011ys} study a minimization
-of a combination of $L_{1}$norm and nuclear norm . However, in the
-constraints , they introduce some tolerance on perturbation. In particular,
-given $M$ as the observed matrix( which is a perturbed observation
-outcome of the original $(L_{0},S_{0})$ pairs) , they analyze the
-following two optimization problems. With arguments as $(L,S)$,
-
+%
+Similar to the prior study of Robust PCA, the authors of~\cite{Hsu:2011ys} study a minimization
+of a weighted combination of $\ell_{1}$ and nuclear norm . However, they also introduce some tolerance on the perturbation in the constraints. In particular, given the observed matrix~$M$ (a perturbed observation of the original $(L_{0},S_{0})$ pairs), they analyze the following two optimization problems: % With arguments as $(L,S)$,
+%
 \begin{eqnarray}
 \min_{(L,S)} & ||L||_{*}+\lambda||S||_{1}\nonumber \\
 s.t. & ||L+S-M||_{1}\le\epsilon_{1}\\
  & ||L+S-M||_{*}\le\epsilon_{*}\nonumber
 \end{eqnarray}
-
-
+%
 and the regularized version
 \begin{eqnarray}
 \min_{(L,S)} & ||L||_{*}+\lambda||S||_{1}+\frac{1}{2\mu}||L+S-M||_{F}
 \end{eqnarray}
 
 
-They provide sufficient conditions on the original $(L_{0},S_{0})$
-pairs that allow accurate recovery in the sense that $||L_{0}-\hat{L}||_{\infty},||S_{0}-\hat{S}||_{\infty}$
-is small. Moreover, if the observed matrix $M$ is perturbed from $L_{0}+S_{0}$
-by a small amount (i.e.$\epsilon$), the optimizer $(\hat{L},\hat{S})$
-will still be $\epsilon-$close to the original $(L_{0},S_{0})$ pairs.
-The key ideas of the analysis of performance guarantee is based on
-the the properties of constructed dual certificate.
+The authors provide sufficient conditions on the pair $(L_{0},S_{0})$ that allow accurate recovery in the sense that $||L_{0}-\hat{L}||_{\infty},||S_{0}-\hat{S}||_{\infty}$ is small. Moreover, they show that if the observed matrix~$M$ is perturbed from $L_{0}+S_{0}$ by a small amount (i.e. $\epsilon$), the optimizer $(\hat{L},\hat{S})$ will still be $\epsilon$-close to the original $(L_{0},S_{0})$ pair. As in Robust PCA, the key ideas of the analysis of the performance guarantee is based on the properties of the constructed dual certificate.
 
 \subsubsection{Discussion and applications}
-The work \cite{Hsu:2011ys} parallels to the work of \cite{Candes:2011fk} but gives the guarantee under a deterministic setting but with a weaker guarantee. Although not pointed out by the authors, we believe that the performance guarantee in this \cite{Hsu:2011ys} and related work is also useful in many applications. For example, in computer vision, the noise  is normally clustered at some portion of the image and it is not natural to assume the noise to be uniformly distributed. Moreover, in many real world applications, we are more interested in approximated recovery instead of exact recovery, so the study of perturbed version is needed. For example, in many analysis of large data set(say consumer ranking in Netflix), we are normally interested in the general idea of the pattern but not the very fine details. However, it is still not clear whether the sufficient conditions provided for the perturbed problem is also necessary. It would be nice if there is any progress towards this end. 
+The work~\cite{Hsu:2011ys} parallels the work of~\cite{Candes:2011fk} but gives a weaker guarantee in a deterministic setting. %Although not pointed out by the authors, 
+We believe that the performance guarantee in this~\cite{Hsu:2011ys} and related work is also useful in many applications. For example, in computer vision, the noise  is normally clustered at some portion of the image and it is not natural to assume the noise to be uniformly distributed. Moreover, in many real world applications, we are often satisfied with approximate recovery. %instead of exact recovery, so the study of perturbed version is needed. 
+For example, in many analyses of large data sets (say for example consumer ranking in Netflix), we are interested in the general idea of the pattern but not necessarily the fine details. At this point it is still unclear whether the sufficient conditions provided for the perturbed problem are also necessary. %It would be nice if there is any progress towards this end. 
+
+
+
