Added matlab file descriptions, moved some data files

--- a/report/algorithms/algorithms.tex
+++ b/report/algorithms/algorithms.tex
@@ -804,7 +804,7 @@ Some of the steps in the discussed SVD-based algorithms are inherently paralleli
 \section{Outlook: Algorithms for Stable Principal Component Pursuit}
 \label{Algorithms:StablePCP:Sec}
 
-As discussed in section REFERENCE, the results obtained for the Robust PCA problem have been extended to the case when in addition to the sparse noise, the data is corrupted also by a small non-sparse noise component~\cite{Zhou:2010vn}. This problem is usually referred to as Stable Principal Component Pursuit (Stable PCP). The associated optimization problem is 
+As was discussed in section~\ref{related:stablePCP}, the results obtained for the Robust PCA problem have been extended to the case when in addition to the sparse noise, the data is corrupted also by a small non-sparse noise component~\cite{Zhou:2010vn}. This problem is usually referred to as Stable Principal Component Pursuit (Stable PCP). The associated optimization problem is 
 %
 \begin{align}
 \begin{split}
