make all the figures in .pdf format

--- a/report/applications/applications.tex
+++ b/report/applications/applications.tex
@@ -17,21 +17,21 @@ Video is a natural candidate for low-rank modeling, due to the correlation betwe
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=1\textwidth]{../figures/SwitchLight_original.jpg}
+  \includegraphics[width=1\textwidth]{../figures/SwitchLight_original.pdf}
   \caption{Original video frames}
   \label{fig:video:original}
 \end{figure}
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=1\textwidth]{../figures/SwitchLight_low_rank.jpg}
+  \includegraphics[width=1\textwidth]{../figures/SwitchLight_low_rank.pdf}
   \caption{Low-rank components}
   \label{fig:video:low_rank}
 \end{figure}
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=1\textwidth]{../figures/SwitchLight_sparse.jpg}
+  \includegraphics[width=1\textwidth]{../figures/SwitchLight_sparse.pdf}
   \caption{Sparse components}
   \label{fig:video:sparse}
 \end{figure}
@@ -42,14 +42,14 @@ The same setting is used into our own video that we took in UC Berkeley. The res
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=1\textwidth]{../figures/campus_capture1.jpg}
+  \includegraphics[width=1\textwidth]{../figures/campus_capture1.pdf}
   \caption{Perfect decomposition from campus video frames}
   \label{fig:video:campus:capture1}
 \end{figure}
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=1\textwidth]{../figures/campus_capture2.jpg}
+  \includegraphics[width=1\textwidth]{../figures/campus_capture2.pdf}
   \caption{Imperfect decomposition from campus video frames}
   \label{fig:video:campus:capture2}
 \end{figure}
@@ -124,13 +124,13 @@ Intuitively, a consistent sound would be of low-rank structure. If someone is sp
 
 \begin{figure}[h]
   \centering
-  \subfloat[clean]{\label{fig:speech:clean}\includegraphics[width=0.5\textwidth]{../figures/speech_clean.jpg}}
+  \subfloat[clean]{\label{fig:speech:clean}\includegraphics[width=0.5\textwidth]{../figures/speech_clean.pdf}}
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad etc. (or a blank line to force the subfig onto a new line)
-  \subfloat[noisy]{\label{fig:speech:noisy}\includegraphics[width=0.5\textwidth]{../figures/speech_noisy.jpg}}
+  \subfloat[noisy]{\label{fig:speech:noisy}\includegraphics[width=0.5\textwidth]{../figures/speech_noisy.pdf}}
   ~ 
-  \\ \subfloat[sparse]{\label{fig:speech:sparse}\includegraphics[width=0.5\textwidth]{../figures/speech_sparse.jpg}}
+  \\ \subfloat[sparse]{\label{fig:speech:sparse}\includegraphics[width=0.5\textwidth]{../figures/speech_sparse.pdf}}
   ~
-  \subfloat[low-rank]{\label{fig:speech:low_rank}\includegraphics[width=0.5\textwidth]{../figures/speech_low_rank.jpg}}
+  \subfloat[low-rank]{\label{fig:speech:low_rank}\includegraphics[width=0.5\textwidth]{../figures/speech_low_rank.pdf}}
 
   \caption{Speech features}
   \label{fig:speech}
@@ -146,7 +146,7 @@ We have used Robust PCA to analyze voting data of the US senators. The data invo
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=1\textwidth]{../figures/vote_cov.jpg}
+  \includegraphics[width=1\textwidth]{../figures/vote_cov.pdf}
   \caption{Covariant matrix and its low-rank component and sparse component}
   \label{fig:vote:covariant}
 \end{figure}
@@ -157,14 +157,14 @@ As shown is fig.~\ref{fig:vote:covariant:pca} and fig.~\ref{fig:vote:covariant:l
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.85\textwidth]{../figures/vote_cov_mat_pca.png}
+  \includegraphics[width=0.85\textwidth]{../figures/vote_cov_mat_pca.pdf}
   \caption{Standard PCA with first two principal components in original covariant matrix}
   \label{fig:vote:covariant:pca}
 \end{figure}
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.85\textwidth]{../figures/vote_cov_lr_pca.png}
+  \includegraphics[width=0.85\textwidth]{../figures/vote_cov_lr_pca.pdf}
   \caption{Standard PCA with first two principal components in low-rank component of covariant matrix}
   \label{fig:vote:covariant:lr:pca}
 \end{figure}
