--- a/report/report/generalization.tex
+++ b/report/report/generalization.tex
@@ -270,7 +270,7 @@ In the simulation, we randomly generated the entries of $p$ and $q$ as $N(0,1)$ 
 \begin{figure}[h!]
 \label{fig:comparison}
 \centering
-\includegraphics[width=\textwidth]{../figures/compare.jpg}
+\includegraphics[width=\textwidth]{../figures/compare.pdf}
 \caption{Ccomparison of Robust PCA and the $\ell_1$ heuristic in solving rank-1 matrix recovery}
 \end{figure}
 
@@ -279,7 +279,7 @@ We also try the $\ell_1$ heuristic for cases where~$L$ is known to be of rank hi
 %
 \begin{figure}[h!]
 \centering
-\includegraphics[width=\textwidth]{../figures/rank2case.jpg}
+\includegraphics[width=\textwidth]{../figures/rank2case.pdf}
 \caption{Performance of $\ell_1$ heuristic in recovering a rank 2 matrix using power iteration}
 \label{fig:rank2}
 \end{figure}
@@ -288,7 +288,7 @@ Finally, in Figure~\ref{fig:rank2s} we also compare the results to those of the 
 %
 \begin{figure}[h!]
 \centering
-\includegraphics[width=\textwidth]{../figures/comparisonwithrank2.jpg}
+\includegraphics[width=\textwidth]{../figures/comparisonwithrank2.pdf}
 \caption{Comparison of Robust PCA and the $\ell_1$ heuristic in solving rank 2 matrix recovery}
 \label{fig:rank2s}
 \end{figure}
