--- a/report/report/related.tex
+++ b/report/report/related.tex
@@ -225,13 +225,13 @@ RASL can be used for example for long-standing batch image alignment problem: gi
 
 \begin{figure}[h!]
   \centering
-  \subfloat[Original images $M$]{\label{fig:rasl:original}\includegraphics[width=0.5\textwidth]{../figures/rasl_original.jpg}}
+  \subfloat[Original images $M$]{\label{fig:rasl:original}\includegraphics[width=0.5\textwidth]{../figures/rasl_original.pdf}}
   ~
-  \subfloat[Aligned images $M\circ\tau$]{\label{fig:rasl:aligned}\includegraphics[width=0.5\textwidth]{../figures/rasl_aligned.jpg}}
+  \subfloat[Aligned images $M\circ\tau$]{\label{fig:rasl:aligned}\includegraphics[width=0.5\textwidth]{../figures/rasl_aligned.pdf}}
   ~
-  \\ \subfloat[Low-rank component $L$]{\label{fig:rasl:lowrank}\includegraphics[width=0.5\textwidth]{../figures/rasl_low_rank.jpg}}
+  \\ \subfloat[Low-rank component $L$]{\label{fig:rasl:lowrank}\includegraphics[width=0.5\textwidth]{../figures/rasl_low_rank.pdf}}
   ~
-  \subfloat[Sparse component $S$]{\label{fig:rasl:sparse}\includegraphics[width=0.5\textwidth]{../figures/rasl_sparse.jpg}}
+  \subfloat[Sparse component $S$]{\label{fig:rasl:sparse}\includegraphics[width=0.5\textwidth]{../figures/rasl_sparse.pdf}}
 
   \caption{Aligning face images.}
   \label{fig:rasl:example}
